--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,14 @@ body {
 *::after {
   box-sizing: border-box;
 }
+
+.wrapper {
+  display: flex;
+}
+.navbar {
+  flex: 0 0 80px;
+}
+
+.item {
+  flex: 1 0 auto;
+}
